tests/ucc/type/good/not-int-ptr.c
int main(void)
{
    int * const b;
    int a;

    if (!b)
        return 1;
    if (!a)
        return 2;

    return 0;
}
