tests/ucc/type/bad/switch-vs-float.c
int main(void)
{
    float a;

    switch (a)
    {

    };

    return 0;
}
